--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ textarea:focus {
 }
 
 .save {
-  background-color: #e1e1e1;
+  background-color: #fcecec;
   border: none;
   border-radius: 15px;
   padding: 5px 10px 5px 10px;
@@ -102,3 +102,12 @@ textarea:focus {
 .search input:focus {
   outline: none;
 }
+
+.toggle-btn{
+  background-color: #e3e9e8;
+  width: 50px;
+  height: 20px;
+  border-radius: 10px;
+
+}
+
